@@ -134,7 +134,7 @@ function Create-AlProjectFolderFromNavContainer {
             $appJson.Version = $version
         }
 
-        if ($appJson.PSObject.Properties -match "Logo") {
+        if ([bool]($appJson.PSObject.Properties.name -eq "Logo")) {
             try {
                 Copy-Item -Path (Join-Path $alFolder $appJson.Logo) -Destination (Join-Path $alProjectFolder $appJson.Logo) -Force
             }
